--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,19 @@
   pointer-events: none;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
+h1, h2
+{
+  font-family: 'Montserrat', sans-serif;
+  font-size: large;
+}
+
+p 
+{
+  font-family: 'Montserrat', sans-serif;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
