--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
 .global-work
 {
     display: grid;
@@ -8,7 +10,7 @@
 
 .title
 {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
     font-size: 35px;
 }
